--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -5,28 +5,32 @@
   "main": "js/main.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "dev:serve": "webpack serve --mode development --open",
+    "dev:serve": "node scripts/dev-server.js",
     "build": "webpack --mode development",
-    "build:prod": "webpack --mode production",
+    "build:prod": "node scripts/build-prod.js",
     "build:analyze": "webpack --mode production --env analyze",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --coverage --watchAll=false --ci",
     "lint": "eslint js/**/*.js",
-    "lint:fix": "eslint js/**/*.js --fix",
+    "lint:fix": "node scripts/lint-fix.js",
     "lint:ci": "eslint js/**/*.js --format junit --output-file reports/eslint-results.xml",
-    "format": "prettier --write js/**/*.js css/**/*.css",
-    "format:check": "prettier --check js/**/*.js css/**/*.css",
-    "serve": "webpack serve --mode development --open",
-    "clean": "rimraf dist node_modules/.cache reports",
+    "format": "prettier --write js/**/*.js css/**/*.css *.html *.json",
+    "format:check": "prettier --check js/**/*.js css/**/*.css *.html *.json",
+    "serve": "node scripts/dev-server.js",
+    "clean": "rimraf dist node_modules/.cache reports coverage",
     "validate": "npm run lint && npm run format:check && npm run test:ci",
     "validate:build": "node scripts/validate-build.js",
     "prebuild": "npm run clean",
     "prebuild:prod": "npm run clean && npm run validate",
     "postbuild": "npm run validate:build",
     "postbuild:prod": "npm run validate:build",
-    "start": "npm run dev:serve"
+    "start": "npm run dev:serve",
+    "audit:fix": "npm audit fix",
+    "deps:check": "npm outdated",
+    "deps:update": "npm update",
+    "config:validate": "node scripts/validate-config.js"
   },
   "keywords": [
     "school",
