--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,30 +31,34 @@ spring:
         order_inserts: true
         order_updates: true
     open-in-view: false
+    defer-datasource-initialization: true
+  
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
   
   h2:
     console:
       enabled: true
       path: /h2-console
   
-  data:
-    redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
-      password: ${REDIS_PASSWORD:}
-      timeout: 2000ms
-      lettuce:
-        pool:
-          max-active: 8
-          max-idle: 8
-          min-idle: 0
+  # Redis disabled for development
+  # data:
+  #   redis:
+  #     host: ${REDIS_HOST:localhost}
+  #     port: ${REDIS_PORT:6379}
   
   cache:
     type: none
-    # Temporarily disabled Redis cache to fix startup issues
-    # redis:
-    #   time-to-live: 600000
-    #   cache-null-values: false
+    # Redis completely disabled for development
+    
+  # Disable Redis data configuration
+  data:
+    redis:
+      repositories:
+        enabled: false
   
   servlet:
     multipart:
@@ -78,7 +82,7 @@ app:
   version: 1.0.0
   description: Spring Boot backend for SIM
   cors:
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:8080}
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:3001,http://localhost:8080}
     allowed-methods: GET,POST,PUT,DELETE,OPTIONS
     allowed-headers: "*"
     allow-credentials: true
