--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+        hbm2ddl:
+          auto: create-drop
     database: h2
   
   h2:
@@ -26,7 +28,7 @@ spring:
 
   sql:
     init:
-      mode: always
+      mode: never
 
 server:
   port: 8080
